# serde_luaq

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api-docs/: before_content.html  style.css
examples/: balatro_to_json.rs  lua_to_json.rs  serde.rs
fuzz-target/: Cargo.toml  README.md
fuzz-target/in/: braces_8k.lua  dental_plan.lua  hello.lua  integers_dec.lua  logo.lua  numbers.lua
fuzz-target/src/: main.rs
serde_luaq/: Cargo.toml
serde_luaq/examples/: lua_to_json.rs  serde.rs
serde_luaq/src/: de.rs  error.rs  formatter.rs  lib.rs  peg_parser.rs  serde_json.rs  table_entry.rs
serde_luaq/src/number/: mod.rs
serde_luaq/src/value/: mod.rs
serde_luaq/tests/: basics.rs  de.rs  identifiers.rs  json.rs  numerals.rs  strings.rs  tables.rs  unsupported.rs
serde_luaq/tests/common/: mod.rs
serde_luaq/tests/data/return/: integers_dec.lua  integers_hex.lua
serde_luaq/tests/data/script/: integers_hex.lua
serde_luaq/tests/data/value/: integers_dec.lua  integers_hex.lua
src/: de.rs  error.rs  lib.rs  number.rs  peg_parser.rs  serde_json.rs  table_entry.rs  value.rs
src/number/: de.rs  mod.rs
src/value/: mod.rs
tests/: basics.rs  de.rs  identifiers.rs  json.rs  numerals.rs  strings.rs  tables.rs  unsupported.rs
tests/common/: mod.rs
