[package]
name = "serde_luaq"
readme = "../README.md"
description = "A Lua %q serialization file format"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_json"]

# Interop with serde_json::Value
serde_json = ["dep:serde_json"]

[dependencies]
hexponent = "0.3.1"
peg = "0.8.5"
serde = "1.0.210"
serde_json = { version = "1.0.138", optional = true }
static_assertions = "1.1.0"
thiserror = "1.0.63"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
clap = { version = "4.5.28", features = ["derive"] }
flate2 = "1.1.2"
serde = { version = "1.0.194", features = ["derive"] }
serde_bytes = "0.11.17"
serde_derive = "1.0.166"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "balatro_to_json"
required-features = ["serde_json"]

[[example]]
name = "lua_to_json"
required-features = ["serde_json"]

[[test]]
name = "json"
required-features = ["serde_json"]
